# personal-projects

C-projects/singly-linked-list/: main.c
Curso-ciencias-de-la-computacion/000_Projects/sensor-project/: CMakeLists.txt
Curso-ciencias-de-la-computacion/000_Projects/sensor-project/include/: Sensor.h  TemperatureSensor.h
Curso-ciencias-de-la-computacion/000_Projects/sensor-project/src/: Sensor.cpp  TemperatureSensor.cpp  main.cpp
Curso-ciencias-de-la-computacion/00_Miscelaneous/vectorCPP/: main.cpp
Curso-ciencias-de-la-computacion/0_Problems/1_shiftZerosToEnd/: shiftZerosToEnd.c
Curso-ciencias-de-la-computacion/0_Problems/3_longestSubstring/: main.py
Curso-ciencias-de-la-computacion/1-Arrays/Python/: main.py
Curso-ciencias-de-la-computacion/10.-Binary Search Tree/C/: main.c
Curso-ciencias-de-la-computacion/10.-Binary Search Tree/CPP/: main.cpp
Curso-ciencias-de-la-computacion/10.-Binary Search Tree/Python/: main.py
Curso-ciencias-de-la-computacion/11.-Heaps/C/: main.c
Curso-ciencias-de-la-computacion/11.-Heaps/CPP/: main.cpp
Curso-ciencias-de-la-computacion/11.-Heaps/Python/: heap.py
Curso-ciencias-de-la-computacion/12.-Sorting/Insertion sort/: main.py
Curso-ciencias-de-la-computacion/12.-Sorting/Quicksort/: main.py
Curso-ciencias-de-la-computacion/4.-Queues/: Queues.rtf
Curso-ciencias-de-la-computacion/5.-Hashing/: main.c
Curso-ciencias-de-la-computacion/7.-Bitwise Operations/: TheoryAndConceptsAboutBitwiseOperations.txt  main.c
nodejs-projects/book-directory/: app.js  methods.http  package-lock.json  package.json
(+95 files in other folders)
